hphp/hack/test/typecheck/this/method_param.php.exp
File "method_param.php", line 4, characters 27-31:
Cannot re-assign `$this` (Parsing[1002])
File "method_param.php", line 5, characters 34-38:
Cannot re-assign `$this` (Parsing[1002])
File "method_param.php", line 4, characters 27-31:
Cannot use `$this` as lexical variable (Naming[2077])
File "method_param.php", line 5, characters 34-38:
Cannot use `$this` as lexical variable (Naming[2077])
