hphp/hack/test/typecheck/this/method_param.php
<?hh

class Foo {
  public function foo(int $this): void {}
  public static function bar(int $this): void {}
}
